# ryu

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  Dockerfile  LICENSING.md  README.md  TRADEMARK.md  biome.json  docker-compose.yml  docker-entrypoint.sh  fly.toml  install.ps1  install.sh  package.json  railway.json  render.yaml  tsconfig.json  turbo.json
apps-store/clips/backend/: Cargo.toml
apps-store/clips/backend/src/: api.rs  lib.rs  main.rs  paths.rs
apps-store/finetune/backend/: Cargo.toml
apps-store/finetune/backend/src/: adapters.rs  api.rs  lib.rs  main.rs  paths.rs  store.rs
apps-store/finetune/backend/tests/: store_roundtrip.rs
apps/cli/: .env.example  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json
apps/cli/src/: api.rs  app.rs  auth.rs  bootstrap.rs  chat.rs  config.rs  main.rs  nodes.rs  render_tests.rs  ui.rs
apps/core/: .env.example  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json
apps/core/assets/pi-extensions/: ryu-mcp.ts
apps/core/scripts/: dev.js  ryu-browser-dev.cmd  ryu-browser-dev.sh
apps/core/src/: capabilities.rs  collab_host.rs  composio_auth.rs  composio_host.rs  crash.rs  crypto_host.rs  dashboards_client.rs  data_path.rs  entitlement.rs  exec_approval.rs  fal_auth.rs  finetune_client.rs  healing_client.rs  hf_auth.rs  image_host.rs  inference.rs  main.rs  mcp_catalog_host.rs  meetings_client.rs  memory_host.rs  mesh_host.rs  model_catalog_host.rs  monitors_client.rs  native_history.rs  openrouter_auth.rs  paths.rs  predict.rs  predict_host.rs  privacy.rs  profile.rs  quests_client.rs  rag_host.rs  recipes_client.rs  recipes_host.rs  replicate_auth.rs  sandbox_host.rs  search_host.rs  skills_host.rs  smtp_auth.rs  stats_beacon.rs  (+9 more)
apps/core/src/activity/: ingest.rs  mod.rs  store.rs
apps/core/src/agent_routing/: auto.rs  mod.rs
apps/core/src/agents/: mod.rs
apps/core/src/approvals/: mod.rs  policy.rs  store.rs
apps/core/src/auth/: mod.rs
apps/core/src/catalog/: cache.rs  github.rs  mod.rs  npm.rs  registry.rs
apps/core/src/catalog_source/: github_topic.rs  mod.rs  registry.rs  sources.rs
apps/core/src/claude_config/: mod.rs
apps/core/src/codex_config/: mod.rs
apps/core/src/collab/: mod.rs
apps/core/src/composio_catalog/: mod.rs
apps/core/src/composio_connect/: mod.rs
apps/core/src/composio_triggers/: mod.rs
apps/core/src/connections/: mod.rs
apps/core/src/crypto/: mod.rs
apps/core/src/dashboard/: mod.rs  refresh.rs  render.rs  sources.rs  store.rs
apps/core/src/downloads/: center.rs  mod.rs
apps/core/src/email/: mod.rs
apps/core/src/eval_code/: mod.rs  tests.rs
apps/core/src/events/: mod.rs
apps/core/src/experience/: mod.rs  store.rs
apps/core/src/finetune/: adapters.rs  mod.rs  store.rs
apps/core/src/hardware/: codec.rs  mod.rs  nudge.rs  pairing.rs  protocol.rs  session.rs  store.rs  turn.rs
apps/core/src/healing/: mod.rs
apps/core/src/identity/: consult.rs  elicitation.rs  governed.rs  health.rs  mod.rs  store.rs
apps/core/src/identity_verify/: mod.rs  permissions.rs
apps/core/src/inference/: mod.rs
apps/core/src/learning/: mod.rs
apps/core/src/mail/: api.rs  mime.rs  mod.rs  send.rs  store.rs
apps/core/src/mcp_catalog/: mod.rs
apps/core/src/meetings/: audio.rs  diarize.rs  mod.rs  notes.rs  store.rs
apps/core/src/mesh/: mod.rs
apps/core/src/model_catalog/: aa.rs  capabilities.rs  device.rs  gguf.rs  installed.rs  llmfit.rs  mod.rs  models_dev.rs
apps/core/src/model_format/: mod.rs
apps/core/src/monitors/: mod.rs  notify.rs  store.rs
apps/core/src/notify/: mod.rs  store.rs
apps/core/src/okf/: mod.rs
apps/core/src/openapi_import/: mod.rs
apps/core/src/pi_config/: mod.rs  (+1 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
apps/gateway/: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  package.json
apps/gateway/src/: audit.rs  budget.rs  cache.rs  channels_host.rs  compression.rs  config.rs  crash.rs  error.rs  evals.rs  jobs.rs  main.rs  policy_alert.rs  profile.rs  quota.rs  semantic_cache.rs  state.rs  telemetry.rs  untrusted.rs
apps/ghost/: CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  package.json
apps/ghost/scripts/: dev.js
apps/ghost/src/: main.rs  refmap.rs  vision_model.rs
apps/ghost/tests/: mcp_integration.rs
apps/tts-sidecar/: README.md  pyproject.toml
apps/tts-sidecar/ryu_tts/: __main__.py  audio.py  registry.py  server.py
apps/unsloth-sidecar/: .gitignore  README.md  pyproject.toml  smoke_test.py
apps/unsloth-sidecar/ryu_unsloth/: __init__.py  __main__.py  jobs.py  server.py
crates/core/activity/: Cargo.toml  README.md
crates/core/collab/: Cargo.toml  README.md
crates/core/composio/: Cargo.toml  README.md
crates/core/crypto/: Cargo.toml  README.md
crates/core/downloads/: Cargo.toml  README.md
crates/core/durable/: Cargo.toml  README.md
crates/core/email-send/: Cargo.toml  README.md
crates/core/engines/: Cargo.toml  README.md
crates/core/eval-code/: Cargo.toml  README.md
crates/core/hardware/: Cargo.toml  README.md
crates/core/image/: Cargo.toml  README.md
crates/core/kernel-contracts/: Cargo.toml  README.md
crates/core/knowledge/: Cargo.toml  README.md
crates/core/mcp-catalog/: Cargo.toml  README.md
crates/core/memory/: Cargo.toml  README.md
crates/core/mesh/: Cargo.toml  README.md
crates/ghost-hands/: Cargo.toml
crates/ghost-hands/src/: click.rs  keyboard.rs  lib.rs  scroll.rs  window.rs
crates/ghost-permissions/: Cargo.toml
crates/ryu-sdk/: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
crates/ryu-sdk-ffi/: Cargo.toml  README.md  SECURITY.md  cbindgen.toml
crates/ryu-sdk-napi/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  smoke.mjs
crates/ryu-sdk-napi/src/: lib.rs
crates/ryu-sdk/specs/: core-openapi.json  gateway-openapi.yaml
crates/ryu-sdk/src/: embedding.rs  gateway.rs  lib.rs  manifest.rs  model.rs  runnable.rs
crates/ryu-sdk/tests/: spec_conformance.rs
(+2676 files in other folders)
