[package]
name = "ryu-core"
version = "0.0.1"
edition = "2021"

# `voice-parakeet` / `voice-vad` are opt-in features (see the [features] section).
# Tell the compiler the cfg values are expected so the dormant gated code doesn't
# trip the unexpected_cfgs lint in default builds that omit them.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("voice-parakeet", "voice-vad"))'] }

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
dirs = "5"
anyhow = "1"
notify = "6"
url = "2"
futures-util = "0.3"
async-stream = "0.3"
sha2 = "0.10"
regex = "1"
tempfile = "3"
hex = "0.4"
semver = { version = "1", features = ["serde"] }
indicatif = "0.17"
tokio-util = { version = "0.7", features = ["io"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlite-vec = "=0.1.6"
humantime = "2"
zstd = "0.13"
urlencoding = "2"
base64 = { version = "0.22", features = ["alloc"] }
# Phase 0 multi-user identity (#multiplayer): verify Better Auth JWTs OFFLINE
# against the JWKS endpoint. EdDSA/Ed25519 is Better Auth's default signing alg
# and jsonwebtoken 9 supports it out of the box (its `jwk` module decodes OKP
# keys via `DecodingKey::from_jwk`). The node-admittance gate stays RYU_TOKEN;
# this layer is the USER identity (see src/identity_verify/).
jsonwebtoken = "9"
rand = "0.8"
# Phase 3 multi-user collaboration (#multiplayer): authoritative CRDT document
# engine. `yrs` is the Rust port of Yjs with an IDENTICAL binary v1 update /
# state-vector format, so a custom JS Yjs provider's updates apply natively — we
# define a tiny self-framed DocSync protocol over the existing realtime DocSync
# channel rather than pulling y-sync/yrs-axum (version traps). See src/collab/.
yrs = "0.27"
chacha20poly1305 = "0.10"
# Ryu Hardware Protocol (RHP v1) audio bridging: the device link speaks Opus
# while the rest of Core speaks WAV/PCM (whisper STT, OuteTTS). The `opus` crate
# wraps libopus through `audiopus-sys`/`opus-sys`, whose build script BUILDS
# libopus FROM VENDORED SOURCE via CMake when pkg-config can't find a system copy
# (the default on Windows + any box without libopus-dev) — so `cargo check` is
# self-contained. Its API is plain slices (`encode(&[i16], &mut [u8])` /
# `decode(&[u8], &mut [i16], fec)`), unlike audiopus's wrapper types.
# `hound` reads/writes the RIFF/WAV the transcribe + synth seams use.
opus = "0.3"
hound = "3"
# Server-side dashboard rasterization for the hardware display surface
# (TRMNL-style: the node renders a device's dashboard to an image, the device just
# polls + blits it — apps/hardware/DASHBOARD.md). We build an SVG layout from the
# live widget data and rasterize it WITHOUT a headless browser: `resvg` renders the
# SVG onto a `tiny-skia` pixmap (pure-Rust, no system deps, no Chromium), and the
# `png` crate encodes the LCD color path. The e-ink path dithers the pixmap to
# 1-bit and packs it ourselves (src/dashboard/render.rs). `resvg` re-exports
# `usvg`/`tiny-skia`, so we depend on it alone to keep ONE version of each.
resvg = "0.44"
png = "0.17"
# `unstable_session_model` exposes `SessionModelState`/`SetSessionModelRequest`
# so the desktop can read+switch an ACP agent's models (Zed-style, but Zed does
# not ship this for external agents). Stable session modes + config options
# (effort) need no feature flag.
# `unstable_session_usage` exposes `SessionUpdate::UsageUpdate { used, size }`
# (live context-window meter) and `PromptResponse.usage` (per-turn token totals),
# which Core surfaces to the desktop as a `data-acp-usage` stats frame. The tokio
# wrapper carries no features of its own; feature unification through the shared
# `agent-client-protocol` dependency gates the schema types in for both.
agent-client-protocol = { version = "=0.11.1", features = [
    "unstable_session_model",
    "unstable_session_usage",
    # session/close for ACP Session Delete (session/list is stable).
    "unstable_session_close",
    # session/load warm-resume of an agent's own retained session (loadSession
    # capability) so an imported/prior thread reconnects to the agent's context
    # instead of replaying history as a fresh prompt.
    "unstable_session_resume",
    # logout: end an authenticated agent session (agentCapabilities.auth.logout).
    "unstable_logout",
] }
agent-client-protocol-tokio = "=0.11.1"
rmcp = { version = "1", features = ["server", "transport-io"] }
schemars = "1"
rusqlite = { version = "0.40.0", features = ["bundled"] }
petgraph = "0.8"
serde_yml = "0.0.12"
# Ghost recipe engine + types (record/parameterize/replay desktop automations).
# Reused so Core and the ghost desktop-automation server agree on the recipe
# schema and the `~/.ghost/recipes/` store path. ghost-core is cross-platform
# (no native input-tap deps — those live in ghost-eyes/ghost-hands).
ghost-core = { path = "../../crates/ghost-core" }
# Shared automation-permission gates. Core detects & reports (never prompts — it
# is a background service); the desktop app / `ghost setup` do the prompting.
ghost-permissions = { path = "../../crates/ghost-permissions" }
# OpenAPI spec generated from the Axum handlers. `--dump-openapi` writes the spec
# the docs site (apps/fumadocs) renders; see src/openapi.rs.
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
# Live system snapshot (CPU/RAM/disk) for the per-node hardware view, plus
# per-process sampling (`process`) for the per-engine resource usage shown in the
# node selector. GPU/VRAM still comes from device.rs.
sysinfo = { version = "0.37", default-features = false, features = ["system", "disk"] }
# OpenTelemetry seam (#539, P1): the vendor-neutral instrumentation export path.
# `tracing-opentelemetry` 0.33 bridges the existing `tracing` spans into OTel; it
# pins `opentelemetry` ^0.32, so the whole family is pinned to 0.32 to keep ONE
# `opentelemetry` in the tree (a version skew pulls two and breaks the layer's
# trait bounds). OTLP/HTTP-protobuf only (`http-proto` + `reqwest-client`) so we
# avoid tonic/grpc — Axiom and most collectors speak OTLP/HTTP. The exporter is
# installed ONLY on consent (see main.rs); with the pref off nothing egresses and
# the local `trace.rs` SQLite sink is untouched. The backend is a swappable config
# value (`diagnostics-otlp-endpoint` / `OTEL_EXPORTER_OTLP_ENDPOINT`), never a lock.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.33"

# Crash reporting tier (#544, P3) — Sentry for Rust PANICS ONLY, gated on the
# `crash-reports-enabled` pref (separate consent from product analytics) + a DSN
# env (`SENTRY_DSN`/`RYU_SENTRY_DSN`); absent DSN => disabled, never crashes boot.
# Deliberately NO `sentry-tracing`/`sentry-log` feature: those sweep `tracing`/log
# events (which can hold prompt/agent content + `~/.ryu` paths) into Sentry. We
# take only the `panic` integration + `backtrace`/`contexts`, and a `before_send`
# scrubs home-dir paths from the panic message + frames. `reqwest`+`native-tls`
# transport matches the tree's existing reqwest (no second TLS stack pulled).
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "native-tls"] }

# Parakeet v3 STT (ONNX) inference — the default STT engine (feature
# `voice-parakeet`). transcribe-rs is git-only and pulls a heavy native ONNX
# Runtime through `ort`. Cross-platform (macOS/Windows/Linux), so — exactly like
# `wasmtime` below — these MUST live in the main [dependencies] table, NOT under a
# per-OS [target...] block, or `dep:transcribe-rs` resolves to nothing off that OS
# and the feature fails to compile there. The model download, catalog, lifecycle,
# and /api/voice/transcribe routing are always compiled in; only the ONNX
# inference (src/sidecar/providers/parakeet engine module) is behind the feature.
# Lean builds without the feature fall back to whisper.cpp (see
# `server::voice::default_stt_engine`). `tempfile` (also used by the engine
# module) is already a non-optional dependency above, so it is not re-declared.
transcribe-rs = { git = "https://github.com/cjpais/transcribe-rs", rev = "d97ae65debaa9bacd5d56aa7d308d13df43c97ec", default-features = false, features = ["onnx"], optional = true }
once_cell = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

# Optional: wasmtime sandbox backend (feature sandbox-wasmtime). Cross-platform
# (macOS/Windows/Linux), so it MUST live in the main [dependencies] table — not
# under a per-OS [target...] block, or `dep:wasmtime` resolves to nothing off
# that OS and the feature fails to compile there. Binary-size delta (release):
# measured in docs/spikes/0188-wasmtime-wasi-ceiling.md
wasmtime = { version = "45", optional = true }
wasmtime-wasi = { version = "45", features = ["p1", "p2"], optional = true }

# OS keychain for the at-rest master key (see src/crypto/mod.rs). Per-platform
# native backend so the key lives outside ~/.ryu: Windows Credential Manager,
# macOS Keychain, Linux Secret Service. Falls back to a file key when absent.
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

# (Parakeet v3 STT optional deps — transcribe-rs + once_cell — live in the main
# [dependencies] table above, NOT here: they are cross-platform and must not be
# gated to this linux-only target block. See the comment beside them.)

[features]
# Programmatic tool calling (PTC, #476). `tool-exec-deno` is the default
# backend: a Deno subprocess (no crate dep — Deno is on PATH), deny-by-default
# permissions, real process isolation. `tool-exec-quickjs` is an off-by-default
# in-process backend gated until a `quickjs_smoke` probe passes on Windows.
# `tool-exec-securexec` (rivet secure-exec, V8 isolate) and `tool-exec-justbash`
# (just-bash in-memory shell) are off-by-default alternative PTC backends:
# registered/selectable but gated as stubs until their Node/Bun runtime + stdio
# tool-bridge harness land (same posture as tool-exec-quickjs).
default = ["tool-exec-deno"]
tool-exec-deno = []
tool-exec-quickjs = []
tool-exec-securexec = []
tool-exec-justbash = []
# Off in `default` on purpose (spike 0188: keep `cargo test`/CI lean). The dev
# and release binaries the user actually runs DO enable it — see the `dev`/
# `dev:watch`/`build` scripts in apps/core/package.json — so the shipped app has
# the default WASM sandbox compiled in and `detect_backend("wasmtime")` is true.
sandbox-wasmtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
# Parakeet STT inference (the default STT engine). Pulls the transcribe-rs/
# once_cell/tempfile optional deps above. Off in Cargo `default` on purpose (keep
# `cargo test`/CI lean, same posture as `sandbox-wasmtime`); the shipped dev/
# release binaries enable it via the package.json scripts.
voice-parakeet = ["dep:transcribe-rs", "dep:once_cell"]
# Neural VAD for voice mode (the default). The endpointing/barge-in state machine
# + an energy-based probability backend are always compiled (voice mode works
# without this); enabling `voice-vad` swaps in the noise-robust Silero VAD ONNX
# model via transcribe-rs's tested `SileroVad` (we already depend on transcribe-rs
# for parakeet). NOTE: the original plan was TEN VAD, but its ONNX model is not
# usable standalone — its feature extraction lives in a closed precompiled native
# lib — so Silero (fully open) is used instead. Off in Cargo `default` on purpose
# (keep `cargo test`/CI lean, same posture as `sandbox-wasmtime`/`voice-parakeet`);
# the shipped dev/release binaries enable it via the package.json scripts. Any
# inference error falls back per-hop to the always-compiled energy VAD.
voice-vad = ["dep:transcribe-rs", "transcribe-rs/vad-silero"]

[dev-dependencies]
tempfile = "3"
